<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/group_about">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_nav_donations"
            android:title="@string/donate" />
    </group>

    <item android:title="@string/language">
        <menu>
            <item
                android:id="@+id/nav_change_the_language"
                android:icon="@drawable/ic_nav_change_the_language"
                android:title="@string/change_the_language" />
        </menu>
    </item>

</menu>
